application/sealed-secrets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealed-secrets
  labels:
    app: sealed-secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sealed-secrets
  template:
    metadata:
      labels:
        app: sealed-secrets
    spec:
      containers:
        - name: sealed-secrets
          image: "ghcr.io/anthonydurot/devfest-2021:sealed-secrets"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
