application/sealed-secrets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealed-secrets
  namespace: demo-sealed-secrets
  labels:
    app: sealed-secrets
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sealed-secrets
