application/sealed-secrets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sealed-secrets
  namespace: demo-sealed-secrets
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: sealed-secrets.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sealed-secrets
            port:
              number: 8080
